--- a/Index.html
+++ b/Index.html
@@ -47,9 +47,9 @@
                             <br>
                             Jennifer Rodriguez
                             <br>
-                            Nombre Compañera
+                            Nicol Reyes
                             <br>
-                            Grupo 10-2
+                            Grupo 11-2
                         </h6>
                         <br>
                         <br>
