--- a/trivia2.html
+++ b/trivia2.html
@@ -28,7 +28,7 @@
 
 			<center>
 				<br><br>
-				<h2>Trivia De la primera guerra mundial Grupo Jennifer</h2>
+				<h2>Trivia De la primera guerra mundial</h2>
 			</center>
 		
 			<br><br><br><br>
