--- a/Trivia.html
+++ b/Trivia.html
@@ -15,7 +15,7 @@
 
     .bg {
       /* The image used */
-      background-image: url("/1.jpg");
+      background-image: url("1.jpg");
 
       /* Full height */
       height: 100%;
